CYBLE-202007-01/BinMonitor.cydsn/REBUILD.log
--------------- Rebuild Started: 10/28/2017 17:43:44 Project: BinMonitor, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM0\ARM_GCC_541\Debug\main.o"
Deleting file ".\BinMonitor.cycdx"
Deleting file ".\BinMonitor.svd"
Deleting file ".\BinMonitor.rpt"
Deleting file ".\BinMonitor_timing.html"
cydsfit.exe -.appdatapath "C:\Users\megan\AppData\Local\Cypress Semiconductor\PSoC Creator\4.1" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\megan\Google Drive\College\S10 - Fall 2017\ECEN 4350 - Embedded uC Design\Github\ECEN4350-EmbeddedMicrocontrollerDesign\CYBLE-202007-01\BinMonitor.cydsn\BinMonitor.cyprj" -d CYBLE-202007-01 -s "C:\Users\megan\Google Drive\College\S10 - Fall 2017\ECEN 4350 - Embedded uC Design\Github\ECEN4350-EmbeddedMicrocontrollerDesign\CYBLE-202007-01\BinMonitor.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 6 pin(s) will be assigned a location by the fitter: \SPI_1:miso_s(0)\, \SPI_1:mosi_s(0)\, \SPI_1:sclk_s(0)\, \SPI_1:ss_s(0)\, LED_BLUE(0), LED_GREEN(0)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -I..\..\ugfx_2.7\ugfx_2.7 -I..\..\ugfx_2.7\ugfx_2.7\drivers\gdisp\RA8875 -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -O0 -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -I..\..\ugfx_2.7\ugfx_2.7 -I..\..\ugfx_2.7\ugfx_2.7\drivers\gdisp\RA8875 -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/gfx_mk.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -O0 -c ..\..\ugfx_2.7\ugfx_2.7\src\gfx_mk.c -o .\CortexM0\ARM_GCC_541\Debug\gfx_mk.o
In file included from ..\..\ugfx_2.7\ugfx_2.7\src\gos/gos_mk.c:14:0,
                 from ..\..\ugfx_2.7\ugfx_2.7\src\gfx_mk.c:9:
..\..\ugfx_2.7\ugfx_2.7\src\gos/gos_raw32.c: In function '_gosInit':
..\..\ugfx_2.7\ugfx_2.7\src\gos/gos_raw32.c:29:4: warning: #warning "GOS: Raw32 - Make sure you initialize your hardware and the C runtime before calling gfxInit() in your application!" [-Wcpp]
   #warning "GOS: Raw32 - Make sure you initialize your hardware and the C runtime before calling gfxInit() in your application!"
    ^
In file included from ..\..\ugfx_2.7\ugfx_2.7\src\gfx_mk.c:23:0:
..\..\ugfx_2.7\ugfx_2.7/drivers/gdisp/RA8875/driver.mk: At top level:
..\..\ugfx_2.7\ugfx_2.7/drivers/gdisp/RA8875/driver.mk:1:8: error: expected '=', ',', ';', 'asm' or '__attribute__' before '+=' token
 GFXINC += $(GFXLIB)/drivers/gdisp/RA8875
        ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 10/28/2017 17:43:51 ---------------
